fixed horizontal scroll in Card

--- a/src/components/Cart/Cart.module.scss
+++ b/src/components/Cart/Cart.module.scss
@@ -9,7 +9,6 @@
 
 
 .container {
-  width: 100%;
   height: 100vh;
   background-color: $greyForBackground;
   display: flex;
